# AI_work

./: .gitignore  README.md  main.py  pyproject.toml
analyze_data/1_turkiye_students/: main.ipynb
analyze_data/perfume/: business_metrics.ipynb  clean.ipynb  merge.ipynb
analyze_data/perfume/dataset/: cleaned_perfume.csv  perfume.csv
analyze_data/turkiye_students/: clean.ipynb  main.ipynb  visualization.ipynb
analyze_data/turkiye_students/dataset/: cleaned_turkiye_students.csv
computational_math/: LR1.ipynb  LR1.md  LR2.ipynb  LR3.ipynb  LR4.ipynb  LR5.ipynb  LR6.ipynb  LR7.ipynb  LR8.ipynb  TH1.ipynb  report.docx
crypto/: autokey_cypher.ipynb  book_cipher.ipynb  cardan.ipynb  dlog.ipynb  elgamal.ipynb  factorization.ipynb  hill_cypher.ipynb  permutations.ipynb  playfair_cypher.ipynb  rsa.ipynb  rsa_coder.ipynb  simple_permutations.ipynb  vernam_cypher.ipynb  vigenere_cypher.ipynb
cybernetics/: HW1.ipynb  golay.ipynb  goley.ipynb  hamming.ipynb  hamming_2.ipynb  hamming_matrix.ipynb  reed_solomon.ipynb  reed_solomon_lib.ipynb  report.ipynb  sphera.ipynb  text
data/: billionaires_1.csv  billionaires_ready.csv  convictions.csv  matstat_LR9_regressiya.txt  psydata.xlsx
functional_analysis/: HW.md  HW1.md
help_tools/selenium/: main.py  save.py
machine/: clearing.py
machine/chat_bot/: 1.ipynb  generate.ipynb
machine/cifar/: 1.ipynb
machine/imdb/: imdb.ipynb
machine/lab1/: main.ipynb
machine/loans/: loans.ipynb
machine/melting_point/: melting_point.ipynb  melting_point_nn.ipynb
machine/road_accident_risk/: analyze.ipynb  prepare_data.ipynb  road_accident_risk.ipynb
machine/titanic/: titanic.ipynb
matstat/: LR10.ipynb  LR3.ipynb  LR4.ipynb  LR4_table.csv  LR5.ipynb  LR6.ipynb  LR7.ipynb  LR8.ipynb  LR9.ipynb  LR_FINAL.ipynb
notebooks/: autohw_intro_ML_92e1d33a4d.ipynb  stepik_1.ipynb  stepik_2.ipynb
optimization/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab3_v2.ipynb
practic/: billionaires.ipynb  billionaires_5.ipynb
practic/labs/: 3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb
practic/labs/1/: 1.1.py
practic/labs/4/: 4.ipynb
sound/: lab1.ipynb  lab2_nvidia.ipynb  lab2_old_facebook.ipynb  lab2_whisper.ipynb  my_audio.py
src/labs/1/: 1.2.py
src/labs/2/: 2.1.ipynb
src/labs/3/: 3.ipynb
temp/: try_langchain.ipynb
text/: lab1.ipynb  lab2.ipynb  lab3.ipynb
text/files/: 1984.txt
theory/: best_loss_unet.pt  convictions.ipynb  nails.ipynb
