[project]
name = "ai-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=25.1.0",
    "colorama>=0.4.6",
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
    "isort>=6.0.1",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pynvml>=12.0.0",
    "ruff>=0.11.7",
    "kagglehub>=0.3.12",
    "opencv-python>=4.11.0.86",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "transformers>=4.56.2",
    "xgboost>=3.0.2",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "ipywidgets>=8.1.7",
    "tensorflow>=2.20.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
    "nbconvert[webpdf]>=7.16.6",
    "pyppeteer>=2.0.0",
    "jupyter>=1.1.1",
    "pandoc>=2.4",
    "optuna>=4.6.0",
    "kaggle>=1.8.3",
    "clipboard>=0.0.4",
    "undetected-chromedriver>=3.5.5",
    "pydantic-settings>=2.12.0",
    "keyboard>=0.13.5",
]
